# wato_asd_training

./: .gitignore  README.md  a53shen_responses.txt  dev_config.sh  docker-compose.yml  initialize.sh  mount.sh  test.sh  watod  watod-config.sh  watod2  watod2-config.sh
.github/workflows/: test.yml
config/: wato_asd_training_foxglove_config .json
docker/: .bashrc  fixuid_setup.sh  ros_entrypoint.sh  wato_ros_entrypoint.sh
docker/gazebo/: gazeboserver.Dockerfile  gazebosim.Dockerfile
docker/infrastructure/vis_tools/: foxglove.Dockerfile
docker/robot/: control.Dockerfile  nav.Dockerfile  occupancy.Dockerfile  robot.Dockerfile
docker/samples/: cpp_aggregator.Dockerfile  cpp_producer.Dockerfile  cpp_transformer.Dockerfile  py_aggregator.Dockerfile  py_producer.Dockerfile  py_transformer.Dockerfile
docker/samples/cpp/: aggregator.Dockerfile  producer.Dockerfile  transformer.Dockerfile
docker/samples/python/: aggregator.Dockerfile  producer.Dockerfile  transformer.Dockerfile
docker/vis_tools/: foxglove.Dockerfile
launch/: building_robot.sdf  robot_env.sdf  sensors_tutorial.sdf  sim.gzlaunch  sim.ign  sim.launch.py
modules/: docker-compose.gazebo.yaml  docker-compose.robot.yaml  docker-compose.samples.yaml  docker-compose.vis_tools.yaml
profiles/: docker-compose.data_stream.yaml  docker-compose.gazebo.yaml  docker-compose.robot.yaml  docker-compose.samples.yaml  docker-compose.vis_tools.yaml
scripts/: watod-setup-env.sh  watod2-setup-env.sh
src/gazebo/: CMakeLists.txt  package.xml
src/gazebo/launch/: env.sdf  env.urdf  robot.urdf  robot_env.sdf  sim.ign  sim.launch.py
src/robot/bringup_robot/: CMakeLists.txt  package.xml
src/robot/bringup_robot/launch/: robot.launch.py
src/robot/control/: CMakeLists.txt  package.xml
src/robot/control/config/: params.yaml
src/robot/control/include/: control_core.hpp  control_node.hpp  timer_node.hpp
src/robot/control/launch/: control.launch.py
src/robot/control/src/: control_core.cpp  control_node.cpp  timer_node.cpp
src/robot/costmap/: CMakeLists.txt  package.xml
src/robot/costmap/config/: params.yaml
src/robot/costmap/include/: costmap_core.hpp  costmap_node copy.hpp  costmap_node.hpp
src/robot/costmap/src/: costmap_core.cpp  costmap_node.cpp  costmap_node_old.cpp
src/robot/localization/: package.xml
src/robot/localization/launch/: localization.launch.py
src/robot/map_memory/: CMakeLists.txt  package.xml
src/robot/map_memory/config/: params.yaml
src/robot/map_memory/include/: map_memory_core.hpp  map_memory_node.hpp
src/robot/map_memory/src/: map_memory_core.cpp  map_memory_node.cpp
src/robot/map_server/: CMakeLists.txt  package.xml
src/robot/map_server/include/: map_server_core.hpp  map_server_node.hpp
src/robot/map_server/src/: map_server_core.cpp  map_server_node.cpp
src/robot/nav/: CMakeLists.txt  package.xml
src/robot/nav/include/: AStar.hpp  nav_core.hpp  nav_node.hpp
src/robot/nav/launch/: nav.launch.py
src/robot/nav/src/: AStar.cpp  nav_core.cpp  nav_node.cpp
src/robot/occupancy/: CMakeLists.txt  package.xml
src/robot/occupancy/include/: occupancy_core.hpp  occupancy_node.hpp
src/robot/occupancy/launch/: aggregator.launch.py  occupancy.launch.py
src/robot/occupancy/src/: occupancy_core.cpp  occupancy_node.cpp
src/robot/odometry_spoof/: CMakeLists.txt  package.xml
src/robot/odometry_spoof/include/: odometry_spoof.hpp
src/robot/odometry_spoof/src/: odometry_spoof.cpp
src/robot/planner/: CMakeLists.txt  package.xml
src/robot/planner/config/: params.yaml
src/robot/planner/include/: planner_core.hpp  planner_node.hpp
src/robot/planner/src/: planner_core.cpp  planner_node.cpp
src/robot/state_machine/: CMakeLists.txt  package.xml
src/robot/state_machine/config/: params.yaml
src/robot/state_machine/include/: state_machine_core.hpp  state_machine_node.hpp
src/robot/state_machine/src/: state_machine_core.cpp  state_machine_node.cpp
src/samples/: README.md
src/samples/cpp/aggregator/: package.xml
src/samples/cpp/producer/: package.xml
src/samples/cpp/producer/src/: producer_node.cpp
src/samples/cpp/transformer/: package.xml
src/samples/cpp/transformer/include/: transformer_core.hpp
src/samples/cpp/transformer/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/samples/cpp/transformer/src/log/: latest_build
src/samples/python/aggregator/: package.xml
src/samples/python/aggregator/aggregator/: aggregator_node.py
src/samples/python/producer/: package.xml
src/samples/python/transformer/: package.xml
src/samples/python/transformer/transformer/: transformer_node.py
src/wato_msgs/sample_msgs/: package.xml
watod_scripts/: watod-completion.bash  watod-setup-dev-env.bash  watod-setup-dev-env.sh  watod-setup-docker-env.sh  watod-setup-env.sh
