<?xml version="1.0"?>
<package format="3">
  <name>bringup_robot</name>
  <version>0.0.0</version>
  <description>Bringup Robot package for launching the robot</description>

  <maintainer email="e23zhou@watonomous.ca">Eddy Zhou</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>costmap</depend>
  <depend>map_memory</depend>
  <depend>state_machine</depend>
  <depend>planner</depend>
  <depend>control</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>